# rsdd-hs

./: cabal.project  cabal.project.local  flake.nix  rsdd-hs.cabal
effectful-rsdd/: effectful-rsdd.cabal
effectful-rsdd/src/Effectful/: RSDD.hs
examples/: Main.hs
lib/Foreign/RSDD/Wmc/: Internal.hs
rsdd-hs/: rsdd-hs.cabal
rsdd-hs/examples/: Main.hs
rsdd-hs/lib/Foreign/: RSDD.hs
rsdd-hs/lib/Foreign/RSDD/: Bdd.hs  Data.hs  Wmc.hs
rsdd-hs/lib/Foreign/RSDD/Bdd/: Internal.hs
rsdd-hs/lib/Foreign/RSDD/Cnf/: Internal.hs
rsdd-hs/test/: Main.hs
test/: Main.hs
