cabal-version:   3.4
name:            rsdd-hs
version:         0.1.0.0
synopsis:        Haskell bindings for RSDD
description:
  Haskell bindings for RSDD, a rust implementation of decision diagrams (both
  binary decision diagrams and sentential decision diagrams). RSDD is a
  efficient, safe, and modern implementation of decision diagrams. Core design
  concerns include ease of integration, performance, and ease of
  experimentation. The hope is that this library will be a useful platform for
  experimentation and iteration on new ideas for these important data
  structures.
  These haskell bindings use the C interop exposed in RSDD which assumes static
  lifetimes for all managers and pointers. For finer granularity with lifetimes,
  please use RSDD directly.

license:         MIT
license-file:    LICENSE
author:          Sam Stites
maintainer:      Sam Stites <spnony@f.cge.qri>#rot13

-- copyright:
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.org

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common base
  default-language: GHC2021
  ghc-options:      -Wall
  build-depends:    base, ghc
  extra-lib-dirs: /home/stites/git/haskell/active/rsdd/target/debug/

library
  import:          base
  exposed-modules:
    Foreign.RSDD
    Foreign.RSDD.Data
    Foreign.RSDD.Bdd
    Foreign.RSDD.Bdd.Internal
    Foreign.RSDD.Cnf.Internal
    Foreign.RSDD.Wmc
    Foreign.RSDD.Wmc.Internal
    -- TODO
    -- Foreign.RSDD.DDnnf.Internal
    -- Foreign.RSDD.DTree.Internal
    -- Foreign.RSDD.Sdd.Internal
    -- Foreign.RSDD.Var.Internal
    -- Foreign.RSDD.VTree.Internal
  extra-libraries: rsdd
  hs-source-dirs:  lib

test-suite test
  import:         base
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:  rsdd-hs
    , hspec
    , tasty
    , tasty-hspec
    , hedgehog
    , hspec-hedgehog
    , doctest


executable example
  import:         base
  hs-source-dirs: examples
  main-is:        Main.hs
  build-depends:  rsdd-hs
